--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -96,14 +96,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Follow 1 sessionid.\n",
-    "sessionid_test = sessionids[5]\n",
-    "df[ df['sessionid']==sessionid_test ].head()"
+    "### Follow 1 sessionid"
    ]
   },
   {
@@ -112,15 +108,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Follow 1 sessionid.\n",
+    "sessionid_test = sessionids[5]\n",
+    "\n",
     "df_sessionid_01 = df[ df['sessionid']==sessionid_test ]\n",
     "plt.subplot(2, 1, 1)\n",
     "plt.plot(df_sessionid_01.index, df_sessionid_01['lat'], 'x-')\n",
-    "plt.title('')\n",
+    "plt.title('sessionid = ' + str(sessionid_test))\n",
     "plt.ylabel('lat (degrees)')\n",
     "\n",
     "plt.subplot(2, 1, 2)\n",
     "plt.plot(df_sessionid_01.index, df_sessionid_01['lng'], 'x-')\n",
-    "plt.title('')\n",
+    "plt.xlabel('Datetime')\n",
+    "plt.ylabel('lng (degrees)')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Follow 1 installid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installid_test = installids[0]\n",
+    "df_installid_01 = df[ df['installid']==installid_test ]\n",
+    "\n",
+    "plt.subplot(2, 1, 1)\n",
+    "plt.plot(df_installid_01.index, df_installid_01['lat'], 'x')\n",
+    "plt.title('installid = ' + str(installid_test))\n",
+    "plt.ylabel('lat (degrees)')\n",
+    "\n",
+    "plt.subplot(2, 1, 2)\n",
+    "plt.plot(df_installid_01.index, df_installid_01['lng'], 'x')\n",
     "plt.xlabel('Datetime')\n",
     "plt.ylabel('lng (degrees)')\n",
     "\n",
@@ -235,6 +262,7 @@
     "# installid describes a user, while sessionid describes a session with a user.\n",
     "class LocationTracker(object):\n",
     "    def __init__(self, input_file):\n",
+    "        logger = logging.getLogger('LocationTracker.__init__()')\n",
     "        self.input_file = input_file\n",
     "        self.df = pd.read_csv(self.input_file,\n",
     "                              parse_dates=[2],\n",
@@ -242,13 +270,13 @@
     "        self.sessionids = self.df['sessionid'].unique()\n",
     "    \n",
     "    def apply_Kalman_filter(self):\n",
+    "        logger = logging.getLogger('LocationTracker.apply_Kalman_filter()')\n",
     "        pass\n",
     "    \n",
     "    def find_stopping_locations(self):\n",
     "        # Need to output a .csv file with each row containing the following information for each stop:\n",
     "        #   installid, start time, end time, latitude, longitude.\n",
-    "        pass\n",
-    "        "
+    "        pass       "
    ]
   },
   {
@@ -258,6 +286,25 @@
    "outputs": [],
    "source": [
     "location_tracker = LocationTracker(input_file='../../../data/TakeHomeData.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index(['installid', 'sessionid']).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to extract the hierarchy of installid --> sessionid.\n",
+    "df.drop_duplicates(subset=['installid', 'sessionid']).set_index(['installid', 'sessionid']).sort_index()"
    ]
   },
   {
@@ -368,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12+"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
