--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -267,7 +267,10 @@
     "        self.df = pd.read_csv(self.input_file,\n",
     "                              parse_dates=[2],\n",
     "                              sep='\\t').set_index(['time']).sort_index()\n",
-    "        self.sessionids = self.df['sessionid'].unique()\n",
+    "        # Try to extract the hierarchy of installid --> sessionid.\n",
+    "        self.df_hierarchy = self.df.drop_duplicates(subset=['installid', 'sessionid']).\\\n",
+    "                                    set_index(['installid', 'sessionid']).\\\n",
+    "                                    sort_index()\n",
     "    \n",
     "    def apply_Kalman_filter(self):\n",
     "        logger = logging.getLogger('LocationTracker.apply_Kalman_filter()')\n",
@@ -276,7 +279,10 @@
     "    def find_stopping_locations(self):\n",
     "        # Need to output a .csv file with each row containing the following information for each stop:\n",
     "        #   installid, start time, end time, latitude, longitude.\n",
-    "        pass       "
+    "        for installid, new_df_hierarchy in self.df_hierarchy.groupby(level=0):\n",
+    "            logger.info('Working on installid = ' + str(installid))\n",
+    "            for sessionid in new_df_hierarchy.index.get_level_values('sessionid'):\n",
+    "                logger.info('Working on sessionid = ' + str(sessionid))"
    ]
   },
   {
@@ -285,7 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_tracker = LocationTracker(input_file='../../../data/TakeHomeData.txt')"
+    "location_tracker = LocationTracker(input_file='../../../data/TakeHomeData.txt')\n",
+    "location_tracker.find_stopping_locations()"
    ]
   },
   {
