--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODOs\n",
+    "* work on each sessionid.\n",
+    "* generate and save plot for each sessionid.\n",
+    "* generate the final CSV file. Need to control the order of the columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -271,10 +281,59 @@
     "        self.df_hierarchy = self.df.drop_duplicates(subset=['installid', 'sessionid']).\\\n",
     "                                    set_index(['installid', 'sessionid']).\\\n",
     "                                    sort_index()\n",
-    "    \n",
-    "    def apply_Kalman_filter(self):\n",
+    "        self.v_threshold = 0.00025\n",
+    "                \n",
+    "    def apply_Kalman_filter(self, df, sessionid):\n",
     "        logger = logging.getLogger('LocationTracker.apply_Kalman_filter()')\n",
-    "        pass\n",
+    "\n",
+    "        delta_t = 1\n",
+    "        F = [[1, 0, delta_t, 0], [0, 1, 0, delta_t], [0, 0, 1, 0], [0, 0, 0, 1]]\n",
+    "        H = [[1, 0, 0, 0], [0, 1, 0, 0]]\n",
+    "        measurements = df.as_matrix(['lat', 'lng'])\n",
+    "\n",
+    "        kf = KalmanFilter(n_dim_state=4,\n",
+    "                          n_dim_obs=2,\n",
+    "                          transition_matrices=F,\n",
+    "                          observation_matrices=H,\n",
+    "                          initial_state_mean=[measurements[0, 0], measurements[0, 1], 0, 0])\n",
+    "\n",
+    "        kf = kf.em(measurements, n_iter=5)\n",
+    "        (filtered_state_means, filtered_state_covariances) = kf.filter(measurements)\n",
+    "        (smoothed_state_means, smoothed_state_covariances) = kf.smooth(measurements)\n",
+    "\n",
+    "        plot_results = True\n",
+    "        if plot_results:\n",
+    "            plt.subplot(5, 1, 1)\n",
+    "            plt.plot(df.index, df['lat'], 'x',\n",
+    "                     df.index, smoothed_state_means[:, 0], '--')\n",
+    "            plt.title('sessionid = ' + str(sessionid))\n",
+    "            plt.ylabel('lat (degrees)')\n",
+    "\n",
+    "            plt.subplot(5, 1, 2)\n",
+    "            plt.plot(df.index, smoothed_state_means[:, 2], '--')\n",
+    "            plt.ylabel('lat velocity')\n",
+    "\n",
+    "            plt.subplot(5, 1, 3)\n",
+    "            plt.plot(df.index, df['lng'], 'x',\n",
+    "                     df.index, smoothed_state_means[:, 1], '--')\n",
+    "            plt.ylabel('lng (degrees)')\n",
+    "\n",
+    "            plt.subplot(5, 1, 4)\n",
+    "            plt.plot(df.index, smoothed_state_means[:, 3], '--')\n",
+    "            plt.ylabel('lng velocity')\n",
+    "\n",
+    "            #b_stop = np.all([np.fabs(df[:, 2]) < self.v_threshold,\n",
+    "            #                 np.fabs(df[:, 3]) < self.v_threshold], axis=0)\n",
+    "\n",
+    "            #plt.subplot(5, 1, 5)\n",
+    "            #plt.plot(df.index, b_stop, '--')\n",
+    "            #plt.ylabel('Stopped?')\n",
+    "            #plt.xlabel('Datetime')\n",
+    "\n",
+    "            plt.show()\n",
+    "\n",
+    "        return smoothed_state_means\n",
+    "\n",
     "    \n",
     "    def find_stopping_locations(self):\n",
     "        # Need to output a .csv file with each row containing the following information for each stop:\n",
@@ -282,7 +341,9 @@
     "        for installid, new_df_hierarchy in self.df_hierarchy.groupby(level=0):\n",
     "            logger.info('Working on installid = ' + str(installid))\n",
     "            for sessionid in new_df_hierarchy.index.get_level_values('sessionid'):\n",
-    "                logger.info('Working on sessionid = ' + str(sessionid))"
+    "                logger.info('Working on sessionid = ' + str(sessionid))\n",
+    "                smoothed_state_means = self.apply_Kalman_filter(self.df[ self.df['sessionid']==sessionid ],\n",
+    "                                                                sessionid)"
    ]
   },
   {
