Fixed typos in code.

--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -14,6 +14,7 @@
     "## TODOs\n",
     "* work on each sessionid.\n",
     "* generate and save plot for each sessionid.\n",
+    "* extract the start and end times for each stop.\n",
     "* generate the final CSV file. Need to control the order of the columns."
    ]
   },
@@ -200,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Follow 1 sessionid.\n",
-    "sessionid_test = sessionids[5]\n",
+    "sessionid_test = sessionids[1]\n",
     "df_sessionid_01 = df[ df['sessionid']==sessionid_test ]\n",
     "\n",
     "delta_t = 1\n",
@@ -286,6 +287,8 @@
     "    def apply_Kalman_filter(self, df, sessionid):\n",
     "        logger = logging.getLogger('LocationTracker.apply_Kalman_filter()')\n",
     "\n",
+    "        # logger.info( 'df = ' + str(df.head()) )\n",
+    "        \n",
     "        delta_t = 1\n",
     "        F = [[1, 0, delta_t, 0], [0, 1, 0, delta_t], [0, 0, 1, 0], [0, 0, 0, 1]]\n",
     "        H = [[1, 0, 0, 0], [0, 1, 0, 0]]\n",
@@ -322,13 +325,13 @@
     "            plt.plot(df.index, smoothed_state_means[:, 3], '--')\n",
     "            plt.ylabel('lng velocity')\n",
     "\n",
-    "            #b_stop = np.all([np.fabs(df[:, 2]) < self.v_threshold,\n",
-    "            #                 np.fabs(df[:, 3]) < self.v_threshold], axis=0)\n",
+    "            b_stop = np.all([np.fabs(smoothed_state_means[:, 2]) < self.v_threshold,\n",
+    "                             np.fabs(smoothed_state_means[:, 3]) < self.v_threshold], axis=0)\n",
     "\n",
-    "            #plt.subplot(5, 1, 5)\n",
-    "            #plt.plot(df.index, b_stop, '--')\n",
-    "            #plt.ylabel('Stopped?')\n",
-    "            #plt.xlabel('Datetime')\n",
+    "            plt.subplot(5, 1, 5)\n",
+    "            plt.plot(df.index, b_stop, '--')\n",
+    "            plt.ylabel('Stopped?')\n",
+    "            plt.xlabel('Datetime')\n",
     "\n",
     "            plt.show()\n",
     "\n",
