--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -217,15 +217,8 @@
     "\n",
     "kf = kf.em(measurements, n_iter=5)\n",
     "(filtered_state_means, filtered_state_covariances) = kf.filter(measurements)\n",
-    "(smoothed_state_means, smoothed_state_covariances) = kf.smooth(measurements)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "(smoothed_state_means, smoothed_state_covariances) = kf.smooth(measurements)\n",
+    "\n",
     "plt.subplot(5, 1, 1)\n",
     "plt.plot(df_sessionid_01.index, df_sessionid_01['lat'], 'x',\n",
     "         df_sessionid_01.index, smoothed_state_means[:, 0], '--')\n",
@@ -248,6 +241,8 @@
     "v_threshold = 0.00025\n",
     "b_stop = np.all([np.fabs(smoothed_state_means[:, 2]) < v_threshold,\n",
     "                 np.fabs(smoothed_state_means[:, 3]) < v_threshold], axis=0)\n",
+    "# Add to the dataframe.\n",
+    "df_sessionid_01['b_stop'] = b_stop.tolist()\n",
     "\n",
     "plt.subplot(5, 1, 5)\n",
     "plt.plot(df_sessionid_01.index, b_stop, '--')\n",
@@ -255,6 +250,16 @@
     "plt.xlabel('Datetime')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the start and end times for each stop.\n",
+    "df_sessionid_01.head()"
    ]
   },
   {
