--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Follow 1 sessionid.\n",
-    "sessionid_test = sessionids[1]\n",
+    "sessionid_test = sessionids[4]\n",
     "df_sessionid_01 = df[ df['sessionid']==sessionid_test ]\n",
     "\n",
     "delta_t = 1\n",
@@ -259,7 +259,27 @@
    "outputs": [],
    "source": [
     "# Extract the start and end times for each stop.\n",
-    "df_sessionid_01.head()"
+    "# Edge case: end with true.\n",
+    "interval_detected = False\n",
+    "dt_start = None\n",
+    "dt_end = None\n",
+    "counter = 0\n",
+    "for index, row in df_sessionid_01.iterrows():\n",
+    "    if row['b_stop']==True:\n",
+    "        if counter== len(df_sessionid_01) - 1:\n",
+    "            # Need to wrap up as we reached the end of the dataframe.\n",
+    "            dt_stop = index\n",
+    "            print (dt_start, dt_stop)\n",
+    "            \n",
+    "        if interval_detected==False:\n",
+    "            interval_detected = True\n",
+    "            dt_start = index\n",
+    "    else:\n",
+    "        if interval_detected==True:\n",
+    "            dt_stop = index\n",
+    "            interval_detected = False\n",
+    "            print (dt_start, dt_stop)\n",
+    "    counter += 1"
    ]
   },
   {
