--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Follow 1 sessionid.\n",
-    "sessionid_test = sessionids[4]\n",
+    "sessionid_test = sessionids[7]\n",
     "df_sessionid_01 = df[ df['sessionid']==sessionid_test ]\n",
     "\n",
     "delta_t = 1\n",
@@ -222,7 +222,8 @@
     "plt.subplot(5, 1, 1)\n",
     "plt.plot(df_sessionid_01.index, df_sessionid_01['lat'], 'x',\n",
     "         df_sessionid_01.index, smoothed_state_means[:, 0], '--')\n",
-    "plt.title('sessionid = ' + str(sessionid_test))\n",
+    "plt.title('installid = ' + str(df_sessionid_01['installid'][0]) + \\\n",
+    "          '; sessionid = ' + str(sessionid_test))\n",
     "plt.ylabel('lat (degrees)')\n",
     "\n",
     "plt.subplot(5, 1, 2)\n",
@@ -264,22 +265,49 @@
     "dt_start = None\n",
     "dt_end = None\n",
     "counter = 0\n",
+    "\n",
+    "# Put the results in an array of dataframes.\n",
+    "df_array = []\n",
+    "\n",
     "for index, row in df_sessionid_01.iterrows():\n",
     "    if row['b_stop']==True:\n",
-    "        if counter== len(df_sessionid_01) - 1:\n",
+    "        if counter==len(df_sessionid_01) - 1:\n",
     "            # Need to wrap up as we reached the end of the dataframe.\n",
-    "            dt_stop = index\n",
-    "            print (dt_start, dt_stop)\n",
+    "            dt_end = index\n",
+    "            print (dt_start, dt_end)\n",
+    "            dict_results = {}\n",
+    "            dict_results['installid'] = [ row['installid'] ]\n",
+    "            dict_results['sessionid'] = [ row['sessionid'] ]\n",
+    "            dict_results['start_time'] = [ dt_start ]\n",
+    "            dict_results['end_time'] = [ dt_end ]\n",
+    "            dict_results['lat'] = [ row['lat'] ]\n",
+    "            dict_results['lng'] = [ row['lng'] ]\n",
+    "            # Build up a *single-row* Dataframe from the dictionary.\n",
+    "            df_array.append( pd.DataFrame.from_dict( dict_results ) )\n",
     "            \n",
     "        if interval_detected==False:\n",
     "            interval_detected = True\n",
     "            dt_start = index\n",
     "    else:\n",
     "        if interval_detected==True:\n",
-    "            dt_stop = index\n",
+    "            dt_end = index\n",
     "            interval_detected = False\n",
-    "            print (dt_start, dt_stop)\n",
-    "    counter += 1"
+    "            print (dt_start, dt_end)\n",
+    "            dict_results = {}\n",
+    "            dict_results['installid'] = [ row['installid'] ]\n",
+    "            dict_results['sessionid'] = [ row['sessionid'] ]\n",
+    "            dict_results['start_time'] = [ dt_start ]\n",
+    "            dict_results['end_time'] = [ dt_end ]\n",
+    "            dict_results['lat'] = [ row['lat'] ]\n",
+    "            dict_results['lng'] = [ row['lng'] ]\n",
+    "            # Build up a *single-row* Dataframe from the dictionary.\n",
+    "            df_array.append( pd.DataFrame.from_dict( dict_results ) )\n",
+    "    counter += 1\n",
+    "    \n",
+    "df_results = pd.concat( df_array )\n",
+    "# Order the columns.\n",
+    "df_results = df_results[['installid', 'sessionid', 'start_time', 'end_time', 'lat', 'lng']]\n",
+    "df_results"
    ]
   },
   {
@@ -309,10 +337,12 @@
     "                                    sort_index()\n",
     "        self.v_threshold = 0.00025\n",
     "                \n",
-    "    def apply_Kalman_filter(self, df, sessionid):\n",
+    "    def apply_Kalman_filter(self, df):\n",
     "        logger = logging.getLogger('LocationTracker.apply_Kalman_filter()')\n",
     "\n",
     "        # logger.info( 'df = ' + str(df.head()) )\n",
+    "        installid = df['installid'][0]\n",
+    "        sessionid = df['sessionid'][0]\n",
     "        \n",
     "        delta_t = 1\n",
     "        F = [[1, 0, delta_t, 0], [0, 1, 0, delta_t], [0, 0, 1, 0], [0, 0, 0, 1]]\n",
@@ -329,49 +359,100 @@
     "        (filtered_state_means, filtered_state_covariances) = kf.filter(measurements)\n",
     "        (smoothed_state_means, smoothed_state_covariances) = kf.smooth(measurements)\n",
     "\n",
-    "        plot_results = True\n",
-    "        if plot_results:\n",
-    "            plt.subplot(5, 1, 1)\n",
-    "            plt.plot(df.index, df['lat'], 'x',\n",
-    "                     df.index, smoothed_state_means[:, 0], '--')\n",
-    "            plt.title('sessionid = ' + str(sessionid))\n",
-    "            plt.ylabel('lat (degrees)')\n",
     "\n",
-    "            plt.subplot(5, 1, 2)\n",
-    "            plt.plot(df.index, smoothed_state_means[:, 2], '--')\n",
-    "            plt.ylabel('lat velocity')\n",
+    "        plt.subplot(5, 1, 1)\n",
+    "        plt.plot(df.index, df['lat'], 'x',\n",
+    "                 df.index, smoothed_state_means[:, 0], '--')\n",
+    "        plt.title('installid = ' + str(installid) + '; sessionid = ' + str(sessionid))\n",
+    "        plt.ylabel('lat (degrees)')\n",
     "\n",
-    "            plt.subplot(5, 1, 3)\n",
-    "            plt.plot(df.index, df['lng'], 'x',\n",
-    "                     df.index, smoothed_state_means[:, 1], '--')\n",
-    "            plt.ylabel('lng (degrees)')\n",
+    "        plt.subplot(5, 1, 2)\n",
+    "        plt.plot(df.index, smoothed_state_means[:, 2], '--')\n",
+    "        plt.ylabel('lat velocity')\n",
     "\n",
-    "            plt.subplot(5, 1, 4)\n",
-    "            plt.plot(df.index, smoothed_state_means[:, 3], '--')\n",
-    "            plt.ylabel('lng velocity')\n",
+    "        plt.subplot(5, 1, 3)\n",
+    "        plt.plot(df.index, df['lng'], 'x',\n",
+    "                 df.index, smoothed_state_means[:, 1], '--')\n",
+    "        plt.ylabel('lng (degrees)')\n",
     "\n",
-    "            b_stop = np.all([np.fabs(smoothed_state_means[:, 2]) < self.v_threshold,\n",
-    "                             np.fabs(smoothed_state_means[:, 3]) < self.v_threshold], axis=0)\n",
+    "        plt.subplot(5, 1, 4)\n",
+    "        plt.plot(df.index, smoothed_state_means[:, 3], '--')\n",
+    "        plt.ylabel('lng velocity')\n",
     "\n",
-    "            plt.subplot(5, 1, 5)\n",
-    "            plt.plot(df.index, b_stop, '--')\n",
-    "            plt.ylabel('Stopped?')\n",
-    "            plt.xlabel('Datetime')\n",
+    "        b_stop = np.all([np.fabs(smoothed_state_means[:, 2]) < self.v_threshold,\n",
+    "                         np.fabs(smoothed_state_means[:, 3]) < self.v_threshold], axis=0)\n",
+    "        # Add to the dataframe.\n",
+    "        df['b_stop'] = b_stop.tolist()\n",
+    "            \n",
+    "        plt.subplot(5, 1, 5)\n",
+    "        plt.plot(df.index, b_stop, '--')\n",
+    "        plt.ylabel('Stopped?')\n",
+    "        plt.xlabel('Datetime')\n",
     "\n",
-    "            plt.show()\n",
+    "        plt.show()\n",
     "\n",
-    "        return smoothed_state_means\n",
+    "        # Extract the start and end times for each stop.\n",
+    "        # Edge case: end with true.\n",
+    "        interval_detected = False\n",
+    "        dt_start = None\n",
+    "        dt_end = None\n",
+    "        counter = 0\n",
+    "\n",
+    "        # Put the results in an array of dataframes.\n",
+    "        df_array = []\n",
+    "\n",
+    "        for index, row in df.iterrows():\n",
+    "            if row['b_stop']==True:\n",
+    "                if counter==len(df) - 1:\n",
+    "                    # Need to wrap up as we reached the end of the dataframe.\n",
+    "                    dt_end = index\n",
+    "                    dict_results = {}\n",
+    "                    dict_results['installid'] = [ row['installid'] ]\n",
+    "                    dict_results['sessionid'] = [ row['sessionid'] ]\n",
+    "                    dict_results['start_time'] = [ dt_start ]\n",
+    "                    dict_results['end_time'] = [ dt_end ]\n",
+    "                    dict_results['lat'] = [ row['lat'] ]\n",
+    "                    dict_results['lng'] = [ row['lng'] ]\n",
+    "                    # Build up a *single-row* Dataframe from the dictionary.\n",
+    "                    df_array.append( pd.DataFrame.from_dict( dict_results ) )\n",
+    "                    \n",
+    "                if interval_detected==False:\n",
+    "                    interval_detected = True\n",
+    "                    dt_start = index\n",
+    "            else:\n",
+    "                if interval_detected==True:\n",
+    "                    dt_end = index\n",
+    "                    interval_detected = False\n",
+    "                    dict_results = {}\n",
+    "                    dict_results['installid'] = [ row['installid'] ]\n",
+    "                    dict_results['sessionid'] = [ row['sessionid'] ]\n",
+    "                    dict_results['start_time'] = [ dt_start ]\n",
+    "                    dict_results['end_time'] = [ dt_end ]\n",
+    "                    dict_results['lat'] = [ row['lat'] ]\n",
+    "                    dict_results['lng'] = [ row['lng'] ]\n",
+    "                    # Build up a *single-row* Dataframe from the dictionary.\n",
+    "                    df_array.append( pd.DataFrame.from_dict( dict_results ) )\n",
+    "            counter += 1\n",
+    "            \n",
+    "        df_results = pd.concat( df_array )\n",
+    "        # Order the columns.\n",
+    "        df_results = df_results[['installid', 'sessionid', 'start_time', 'end_time', 'lat', 'lng']]\n",
+    "            \n",
+    "        return df_results\n",
     "\n",
     "    \n",
     "    def find_stopping_locations(self):\n",
     "        # Need to output a .csv file with each row containing the following information for each stop:\n",
     "        #   installid, start time, end time, latitude, longitude.\n",
+    "        df_array = []\n",
     "        for installid, new_df_hierarchy in self.df_hierarchy.groupby(level=0):\n",
     "            logger.info('Working on installid = ' + str(installid))\n",
     "            for sessionid in new_df_hierarchy.index.get_level_values('sessionid'):\n",
     "                logger.info('Working on sessionid = ' + str(sessionid))\n",
-    "                smoothed_state_means = self.apply_Kalman_filter(self.df[ self.df['sessionid']==sessionid ],\n",
-    "                                                                sessionid)"
+    "                df = self.apply_Kalman_filter(self.df[ self.df['sessionid']==sessionid ].copy() )\n",
+    "                logger.info( 'df = ' + str(df) )\n",
+    "                df_array.append( df )\n",
+    "        return pd.concat( df_array )"
    ]
   },
   {
@@ -381,7 +462,7 @@
    "outputs": [],
    "source": [
     "location_tracker = LocationTracker(input_file='../../../data/TakeHomeData.txt')\n",
-    "location_tracker.find_stopping_locations()"
+    "df_results = location_tracker.find_stopping_locations()"
    ]
   },
   {
@@ -390,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.set_index(['installid', 'sessionid']).head()"
+    "df_results.head(10)"
    ]
   },
   {
@@ -511,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12+"
   }
  },
  "nbformat": 4,
