Check in the version of the notebook that was submitted.

--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Science Take Home"
+    "# Data Science Take Home\n",
+    "### William Wong\n",
+    "### Oct 11, 2017"
    ]
   },
   {
@@ -12,10 +14,10 @@
    "metadata": {},
    "source": [
     "## TODOs\n",
-    "* work on each sessionid.\n",
+    "* (OK) work on each sessionid.\n",
     "* generate and save plot for each sessionid.\n",
-    "* extract the start and end times for each stop.\n",
-    "* generate the final CSV file. Need to control the order of the columns."
+    "* (OK) extract the start and end times for each stop.\n",
+    "* (OK) generate the final CSV file. Need to control the order of the columns."
    ]
   },
   {
@@ -201,7 +203,7 @@
    "outputs": [],
    "source": [
     "# Follow 1 sessionid.\n",
-    "sessionid_test = sessionids[7]\n",
+    "sessionid_test = sessionids[1]\n",
     "df_sessionid_01 = df[ df['sessionid']==sessionid_test ]\n",
     "\n",
     "delta_t = 1\n",
@@ -220,20 +222,22 @@
     "(smoothed_state_means, smoothed_state_covariances) = kf.smooth(measurements)\n",
     "\n",
     "plt.subplot(5, 1, 1)\n",
-    "plt.plot(df_sessionid_01.index, df_sessionid_01['lat'], 'x',\n",
-    "         df_sessionid_01.index, smoothed_state_means[:, 0], '--')\n",
+    "h51a, = plt.plot(df_sessionid_01.index, df_sessionid_01['lat'], 'x', label='Data')\n",
+    "h51b, = plt.plot(df_sessionid_01.index, smoothed_state_means[:, 0], '--', label='Estimated Latitude from Kalman Filter')\n",
     "plt.title('installid = ' + str(df_sessionid_01['installid'][0]) + \\\n",
     "          '; sessionid = ' + str(sessionid_test))\n",
     "plt.ylabel('lat (degrees)')\n",
+    "plt.legend(handles=[h51a, h51b])\n",
     "\n",
     "plt.subplot(5, 1, 2)\n",
     "plt.plot(df_sessionid_01.index, smoothed_state_means[:, 2], '--')\n",
     "plt.ylabel('lat velocity')\n",
     "\n",
     "plt.subplot(5, 1, 3)\n",
-    "plt.plot(df_sessionid_01.index, df_sessionid_01['lng'], 'x',\n",
-    "         df_sessionid_01.index, smoothed_state_means[:, 1], '--')\n",
+    "h53a, = plt.plot(df_sessionid_01.index, df_sessionid_01['lng'], 'x', label='Data')\n",
+    "h53b, = plt.plot(df_sessionid_01.index, smoothed_state_means[:, 1], '--', label='Estimated Longitude from Kalman Filter')\n",
     "plt.ylabel('lng (degrees)')\n",
+    "plt.legend(handles=[h53a, h53b])\n",
     "\n",
     "plt.subplot(5, 1, 4)\n",
     "plt.plot(df_sessionid_01.index, smoothed_state_means[:, 3], '--')\n",
@@ -250,6 +254,8 @@
     "plt.ylabel('Stopped?')\n",
     "plt.xlabel('Datetime')\n",
     "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('kalman01.png', dpi=600)\n",
     "plt.show()"
    ]
   },
@@ -462,7 +468,8 @@
    "outputs": [],
    "source": [
     "location_tracker = LocationTracker(input_file='../../../data/TakeHomeData.txt')\n",
-    "df_results = location_tracker.find_stopping_locations()"
+    "df_results = location_tracker.find_stopping_locations()\n",
+    "df_results.to_csv('results.csv', index=False)"
    ]
   },
   {
@@ -553,16 +560,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(coords[:, 0], coords[:, 1], '.')\n",
+    "h1a, = plt.plot(coords[:, 0], coords[:, 1], '.', label='Data')\n",
     "plt.xlabel('lat')\n",
     "plt.ylabel('lng')\n",
     "plt.title('installid =' + str(installid_test))\n",
     "\n",
     "for cluster in clusters:\n",
     "    try:\n",
-    "      plt.plot( MultiPoint(cluster).centroid.x, MultiPoint(cluster).centroid.y, 'ro')\n",
+    "      h1b, = plt.plot( MultiPoint(cluster).centroid.x, MultiPoint(cluster).centroid.y, 'ro', label='Estimated Clusters')\n",
     "    except Exception as e:\n",
     "        logger.exception( 'Caught exception ' + str(e) )\n",
+    "\n",
+    "plt.legend(handles=[h1a, h1b])\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('dbscan01.png', dpi=600)\n",
     "plt.show()"
    ]
   },
@@ -592,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12+"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
