--- a/src/Python/notebooks/explore.ipynb
+++ b/src/Python/notebooks/explore.ipynb
@@ -29,6 +29,7 @@
     "from geopy.distance import great_circle\n",
     "import logging\n",
     "import math\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -38,7 +39,7 @@
     "from sklearn.cluster import DBSCAN\n",
     "import sys\n",
     "\n",
-    "pylab.rcParams['figure.figsize'] = (13, 10)"
+    "matplotlib.rcParams['figure.figsize'] = (13, 10)"
    ]
   },
   {
@@ -603,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
